--- a/game.css
+++ b/game.css
@@ -481,6 +481,10 @@
 	/* border: 2px solid red; */
 }
 
+/* .append-btn {
+	font-size: 1rem;
+} */
+
 .indv-scores {
 	display: flex;
 	flex-direction: row;
@@ -537,7 +541,8 @@
 	width: 100vw;
 	display: flex;
 	justify-content: center;
-	margin-bottom: 50px;
+	margin-bottom: 10px;
+	/* border: 1px solid greenyellow; */
 }
 
 .all-results-container {
@@ -621,6 +626,7 @@
 #chartWrapper {
 	/* border: 4px solid brown; */
 	display: flex;
+	justify-content: center;
 }
 
 .chart-row {
@@ -629,7 +635,7 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	width: 100%;
-	/* border: 6px solid darkgoldenrod; */
+	/* border: 4px solid darkgoldenrod; */
 	margin: 5vh 3vw;
 }
 
