--- a/app.css
+++ b/app.css
@@ -76,7 +76,7 @@ span {
 	text-align: center;
 	max-width: 50vw;
 	max-height: 70vh;
-	margin: 10px;
+	margin: 5px;
 }
 
 @media screen and (max-width: 3000px) {
@@ -86,13 +86,13 @@ span {
 }
 @media screen and (max-width: 1400px) {
 	.end-box {
-		max-width: 50vw;
+		max-width: 60vw;
 	}
 }
 
 @media screen and (max-width: 800px) {
 	.end-box {
-		max-width: 50vw;
+		max-width: 60vw;
 	}
 }
 .logo {
@@ -112,16 +112,19 @@ span {
 		width: 240px;
 	}
 }
-@media screen and (max-width: 800px) {
-	.logo {
-		width: 200px;
-	}
-}
+
 @media screen and (max-width: 500px) {
 	.logo {
 		width: 150px;
 	}
 } */
+
+@media screen and (max-width: 800px) {
+	.logo {
+		width: 200px;
+		height: 51.3px;
+	}
+}
 
 .end-body {
 	color: white;
